version/stable/_sources/api/ansys/mechanical/stubs/v241/Ansys/ACT/Automation/Mechanical/BoundaryConditions/AcousticIncidentWaveSource.rst.txt
.. vale off



:class:`AcousticIncidentWaveSource`
===================================

.. py:class:: ansys.mechanical.stubs.v241.Ansys.ACT.Automation.Mechanical.BoundaryConditions.AcousticIncidentWaveSource

   Bases: :py:obj:`object`


   
   Defines a AcousticIncidentWaveSource.
















   ..
       !! processed by numpydoc !!


.. py:currentmodule:: AcousticIncidentWaveSource

Overview
--------

.. tab-set::



   .. tab-item:: Methods

      .. list-table::
          :header-rows: 0
          :widths: auto

          * - :py:attr:`~Activate`
            - Activate the current object.
          * - :py:attr:`~AddComment`
            - Creates a new child Comment.
          * - :py:attr:`~AddFigure`
            - Creates a new child Figure.
          * - :py:attr:`~AddImage`
            - Creates a new child Image.
          * - :py:attr:`~CopyTo`
            - Copies all visible properties from this object to another.
          * - :py:attr:`~CreateParameter`
            - Creates a new parameter for a Property.
          * - :py:attr:`~Delete`
            - Run the Delete action.
          * - :py:attr:`~Duplicate`
            - Creates a copy of the current DataModelObject.
          * - :py:attr:`~GetChildren`
            - Gets the list of children, filtered by type.
          * - :py:attr:`~GetParameter`
            - Gets the parameter corresponding to the given property.
          * - :py:attr:`~GroupAllSimilarChildren`
            - Run the GroupAllSimilarChildren action.
          * - :py:attr:`~GroupSimilarObjects`
            - Run the GroupSimilarObjects action.
          * - :py:attr:`~PromoteToNamedSelection`
            - Run the PromoteToNamedSelection action.
          * - :py:attr:`~PropertyByAPIName`
            - Get a property by its API name.
          * - :py:attr:`~PropertyByName`
            - Get a property by its unique name.
          * - :py:attr:`~RemoveParameter`
            - Removes the parameter from the parameter set corresponding to the given property.


   .. tab-item:: Properties

      .. list-table::
          :header-rows: 0
          :widths: auto

          * - :py:attr:`~AnglePhi`
            - Gets or sets the AnglePhi.
          * - :py:attr:`~AngleTheta`
            - Gets or sets the AngleTheta.
          * - :py:attr:`~CalculateIncidentPower`
            - Gets or sets the CalculateIncidentPower.
          * - :py:attr:`~Children`
            - Gets the list of children.
          * - :py:attr:`~Comments`
            - Gets the list of associated comments.
          * - :py:attr:`~DataModelObjectCategory`
            - Gets the current DataModelObject's category.
          * - :py:attr:`~DipoleLength`
            - Gets or sets the DipoleLength.
          * - :py:attr:`~ExcitationType`
            - Gets or sets the ExcitationType.
          * - :py:attr:`~Figures`
            - Gets the list of associated figures.
          * - :py:attr:`~Images`
            - Gets the list of associated images.
          * - :py:attr:`~IncidentWaveLocation`
            - Gets or sets the IncidentWaveLocation.
          * - :py:attr:`~InternalObject`
            - Gets the internal object. For advanced usage only.
          * - :py:attr:`~MassDensity`
            - Gets or sets the MassDensity.
          * - :py:attr:`~Material`
            - Gets or sets the Material.
          * - :py:attr:`~MaterialAssignment`
            - Gets or sets the Material.
          * - :py:attr:`~PhaseAngle`
            - Gets or sets the PhaseAngle.
          * - :py:attr:`~PortSelection`
            - Gets or sets the PortSelection.
          * - :py:attr:`~PressureAmplitude`
            - Gets or sets the PressureAmplitude.
          * - :py:attr:`~Properties`
            - Gets the list of properties for this object.
          * - :py:attr:`~RadiusOfPulsatingSphere`
            - Gets or sets the RadiusOfPulsatingSphere.
          * - :py:attr:`~ReadOnly`
            - Gets or sets the ReadOnly.
          * - :py:attr:`~SharedRefBody`
            - Gets or sets the SharedRefBody.
          * - :py:attr:`~SourceOriginX`
            - Gets or sets the SourceOriginX.
          * - :py:attr:`~SourceOriginY`
            - Gets or sets the SourceOriginY.
          * - :py:attr:`~SourceOriginZ`
            - Gets or sets the SourceOriginZ.
          * - :py:attr:`~SpeedOfSound`
            - Gets or sets the SpeedOfSound.
          * - :py:attr:`~Suppressed`
            - Gets or sets the Suppressed.
          * - :py:attr:`~VelocityAmplitude`
            - Gets or sets the VelocityAmplitude.
          * - :py:attr:`~VisibleProperties`
            - Gets the list of properties that are visible for this object.
          * - :py:attr:`~WaveNumber`
            - Gets the WaveNumber.
          * - :py:attr:`~WaveType`
            - Gets or sets the WaveType.
          * - :py:attr:`~XComponentOfUnitDipoleVector`
            - Gets or sets the XComponentOfUnitDipoleVector.
          * - :py:attr:`~YComponentOfUnitDipoleVector`
            - Gets or sets the YComponentOfUnitDipoleVector.
          * - :py:attr:`~ZComponentOfUnitDipoleVector`
            - Gets or sets the ZComponentOfUnitDipoleVector.







Property detail
---------------
.. py:property:: AnglePhi
   :type: Optional[Ansys.Core.Units.Quantity]

   
   Gets or sets the AnglePhi.
















   ..
       !! processed by numpydoc !!

.. py:property:: AngleTheta
   :type: Optional[Ansys.Core.Units.Quantity]

   
   Gets or sets the AngleTheta.
















   ..
       !! processed by numpydoc !!

.. py:property:: CalculateIncidentPower
   :type: Optional[bool]

   
   Gets or sets the CalculateIncidentPower.
















   ..
       !! processed by numpydoc !!

.. py:property:: Children
   :type: Optional[list[Ansys.Mechanical.DataModel.Interfaces.IDataModelObject]]

   
   Gets the list of children.
















   ..
       !! processed by numpydoc !!

.. py:property:: Comments
   :type: Optional[Iterable[Ansys.ACT.Automation.Mechanical.Comment]]

   
   Gets the list of associated comments.
















   ..
       !! processed by numpydoc !!

.. py:property:: DataModelObjectCategory
   :type: Optional[Ansys.Mechanical.DataModel.Enums.DataModelObjectCategory]

   
   Gets the current DataModelObject's category.
















   ..
       !! processed by numpydoc !!

.. py:property:: DipoleLength
   :type: Optional[Ansys.Core.Units.Quantity]

   
   Gets or sets the DipoleLength.
















   ..
       !! processed by numpydoc !!

.. py:property:: ExcitationType
   :type: Optional[Ansys.Mechanical.DataModel.Enums.ExcitationType]

   
   Gets or sets the ExcitationType.
















   ..
       !! processed by numpydoc !!

.. py:property:: Figures
   :type: Optional[Iterable[Ansys.ACT.Automation.Mechanical.Figure]]

   
   Gets the list of associated figures.
















   ..
       !! processed by numpydoc !!

.. py:property:: Images
   :type: Optional[Iterable[Ansys.ACT.Automation.Mechanical.Image]]

   
   Gets the list of associated images.
















   ..
       !! processed by numpydoc !!

.. py:property:: IncidentWaveLocation
   :type: Optional[Ansys.Mechanical.DataModel.Enums.IncidentWaveLocation]

   
   Gets or sets the IncidentWaveLocation.
















   ..
       !! processed by numpydoc !!

.. py:property:: InternalObject
   :type: Optional[Ansys.Common.Interop.DSObjectsAuto.IDSLoadAuto]

   
   Gets the internal object. For advanced usage only.
















   ..
       !! processed by numpydoc !!

.. py:property:: MassDensity
   :type: Optional[Ansys.Core.Units.Quantity]

   
   Gets or sets the MassDensity.
















   ..
       !! processed by numpydoc !!

.. py:property:: Material
   :type: Optional[str]

   
   Gets or sets the Material.
















   ..
       !! processed by numpydoc !!

.. py:property:: MaterialAssignment
   :type: Optional[str]

   
   Gets or sets the Material.
















   ..
       !! processed by numpydoc !!

.. py:property:: PhaseAngle
   :type: Optional[Ansys.Core.Units.Quantity]

   
   Gets or sets the PhaseAngle.
















   ..
       !! processed by numpydoc !!

.. py:property:: PortSelection
   :type: Optional[Ansys.ACT.Automation.Mechanical.BoundaryConditions.AcousticPort]

   
   Gets or sets the PortSelection.
















   ..
       !! processed by numpydoc !!

.. py:property:: PressureAmplitude
   :type: Optional[Ansys.Core.Units.Quantity]

   
   Gets or sets the PressureAmplitude.
















   ..
       !! processed by numpydoc !!

.. py:property:: Properties
   :type: Optional[tuple[Ansys.ACT.Automation.Mechanical.Property]]

   
   Gets the list of properties for this object.
















   ..
       !! processed by numpydoc !!

.. py:property:: RadiusOfPulsatingSphere
   :type: Optional[Ansys.Core.Units.Quantity]

   
   Gets or sets the RadiusOfPulsatingSphere.
















   ..
       !! processed by numpydoc !!

.. py:property:: ReadOnly
   :type: Optional[bool]

   
   Gets or sets the ReadOnly.
















   ..
       !! processed by numpydoc !!

.. py:property:: SharedRefBody
   :type: Optional[Ansys.ACT.Automation.Mechanical.Body]

   
   Gets or sets the SharedRefBody.
















   ..
       !! processed by numpydoc !!

.. py:property:: SourceOriginX
   :type: Optional[Ansys.Core.Units.Quantity]

   
   Gets or sets the SourceOriginX.
















   ..
       !! processed by numpydoc !!

.. py:property:: SourceOriginY
   :type: Optional[Ansys.Core.Units.Quantity]

   
   Gets or sets the SourceOriginY.
















   ..
       !! processed by numpydoc !!

.. py:property:: SourceOriginZ
   :type: Optional[Ansys.Core.Units.Quantity]

   
   Gets or sets the SourceOriginZ.
















   ..
       !! processed by numpydoc !!

.. py:property:: SpeedOfSound
   :type: Optional[Ansys.Core.Units.Quantity]

   
   Gets or sets the SpeedOfSound.
















   ..
       !! processed by numpydoc !!

.. py:property:: Suppressed
   :type: Optional[bool]

   
   Gets or sets the Suppressed.
















   ..
       !! processed by numpydoc !!

.. py:property:: VelocityAmplitude
   :type: Optional[Ansys.Core.Units.Quantity]

   
   Gets or sets the VelocityAmplitude.
















   ..
       !! processed by numpydoc !!

.. py:property:: VisibleProperties
   :type: Optional[tuple[Ansys.ACT.Automation.Mechanical.Property]]

   
   Gets the list of properties that are visible for this object.
















   ..
       !! processed by numpydoc !!

.. py:property:: WaveNumber
   :type: Optional[int]

   
   Gets the WaveNumber.
















   ..
       !! processed by numpydoc !!

.. py:property:: WaveType
   :type: Optional[Ansys.Mechanical.DataModel.Enums.WaveType]

   
   Gets or sets the WaveType.
















   ..
       !! processed by numpydoc !!

.. py:property:: XComponentOfUnitDipoleVector
   :type: Optional[float]

   
   Gets or sets the XComponentOfUnitDipoleVector.
















   ..
       !! processed by numpydoc !!

.. py:property:: YComponentOfUnitDipoleVector
   :type: Optional[float]

   
   Gets or sets the YComponentOfUnitDipoleVector.
















   ..
       !! processed by numpydoc !!

.. py:property:: ZComponentOfUnitDipoleVector
   :type: Optional[float]

   
   Gets or sets the ZComponentOfUnitDipoleVector.
















   ..
       !! processed by numpydoc !!





Method detail
-------------
.. py:method:: Activate() -> None

   
   Activate the current object.

   ..
       !! processed by numpydoc !!

.. py:method:: AddComment() -> Ansys.ACT.Automation.Mechanical.Comment

   
   Creates a new child Comment.

   ..
       !! processed by numpydoc !!

.. py:method:: AddFigure() -> Ansys.ACT.Automation.Mechanical.Figure

   
   Creates a new child Figure.

   ..
       !! processed by numpydoc !!

.. py:method:: AddImage(filePath: str) -> Ansys.ACT.Automation.Mechanical.Image

.. code-block:: text

   Creates a new child Image.
   If a filePath is provided, the image will be loaded from that file,
   if not, the image will be a screen capture of the Geometry window.

..
       !! processed by numpydoc !!

.. py:method:: CopyTo(other: Ansys.ACT.Automation.Mechanical.DataModelObject) -> None

   
   Copies all visible properties from this object to another.

   ..
       !! processed by numpydoc !!

.. py:method:: CreateParameter(propName: str) -> Ansys.ACT.Interfaces.Mechanical.IParameter

   
   Creates a new parameter for a Property.

   ..
       !! processed by numpydoc !!

.. py:method:: Delete() -> None

   
   Run the Delete action.

   ..
       !! processed by numpydoc !!

.. py:method:: Duplicate() -> Ansys.Mechanical.DataModel.Interfaces.IDataModelObject

   
   Creates a copy of the current DataModelObject.

   ..
       !! processed by numpydoc !!

.. py:method:: GetChildren(recurses: bool, children: list[ChildrenType]) -> list[ChildrenType]

   
   Gets the list of children, filtered by type.

   ..
       !! processed by numpydoc !!

.. py:method:: GetParameter(propName: str) -> Ansys.ACT.Interfaces.Mechanical.IParameter

   
   Gets the parameter corresponding to the given property.

   ..
       !! processed by numpydoc !!

.. py:method:: GroupAllSimilarChildren() -> None

   
   Run the GroupAllSimilarChildren action.

   ..
       !! processed by numpydoc !!

.. py:method:: GroupSimilarObjects() -> Ansys.ACT.Automation.Mechanical.TreeGroupingFolder

   
   Run the GroupSimilarObjects action.

   ..
       !! processed by numpydoc !!

.. py:method:: PromoteToNamedSelection() -> Iterable[Ansys.ACT.Automation.Mechanical.NamedSelection]

   
   Run the PromoteToNamedSelection action.

   ..
       !! processed by numpydoc !!

.. py:method:: PropertyByAPIName(name: str) -> Ansys.ACT.Automation.Mechanical.Property

.. code-block:: text

   Get a property by its API name.
   If multiple properties have the same API Name, only the first property with that name will be returned.

..
       !! processed by numpydoc !!

.. py:method:: PropertyByName(name: str) -> Ansys.ACT.Automation.Mechanical.Property

   
   Get a property by its unique name.

   ..
       !! processed by numpydoc !!

.. py:method:: RemoveParameter(propName: str) -> None

   
   Removes the parameter from the parameter set corresponding to the given property.

   ..
       !! processed by numpydoc !!



.. vale on